--- a/README
+++ b/README
@@ -8,23 +8,26 @@ and a library (called client library) which encapsulates the
 communication between the client and the server.
 
 Runtime requirements:
-  cygwin-1.5.25-15
-  libboost_program-options1.37-1.37.0-1
-  libQtCore4-4.4.2-1
-  libQtDBus4-4.4.2-1
-  libQtNetwork4-4.4.2-1
-  libQtSql4-4.4.2-1
-  libQtXml4-4.4.2-1
+  cygwin-1.7.0-49
+  libboost1.37-1.37.0-10
+  libgcc1-4.3.2-2
+  libQtCore4-4.5.1-1
+  libQtDBus4-4.5.1-1
+  libQtNetwork4-4.5.1-1
+  libQtSql4-4.5.1-1
+  libQtXml4-4.5.1-1
+  libstdc++6-4.3.2-2
   mysql
 
 Build requirements:
 (besides corresponding -devel packages)
   automoc4-0.9.88-1
   binutils-20080624-2
-  cygport-0.4.4-1
-  gcc-core-3.4.4-3
-  gcc-g++-3.4.4-3
-  make-3.81-1
+  cygport-0.9.7-1
+  gcc4-core-4.3.2-2
+  gcc4-g++-4.3.2-2
+  make-3.81-2
+  pkg-config-0.23b-10
 
 Canonical website:
   http://pim.kde.org/akonadi/
@@ -35,17 +38,17 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack akonadi-1.1.1-X-src.tar.bz2
+  unpack akonadi-1.1.2-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./akonadi-1.1.1-X.cygport all
+  cygport ./akonadi-1.1.2-X.cygport all
 
 This will create:
-  /usr/src/akonadi-1.1.1-X-src.tar.bz2
-  /usr/src/akonadi-1.1.1-X.tar.bz2
-  /usr/src/libakonadiprivate-devel-1.1.1-X.tar.bz2
-  /usr/src/libakonadiprivate1-1.1.1-X.tar.bz2
+  /usr/src/akonadi-1.1.2-X-src.tar.bz2
+  /usr/src/akonadi-1.1.2-X.tar.bz2
+  /usr/src/libakonadiprotocolinternals-devel-1.1.2-X.tar.bz2
+  /usr/src/libakonadiprotocolinternals1-1.1.2-X.tar.bz2
 
 -------------------------------------------
 
@@ -56,20 +59,19 @@ Files included in the binary packages:
   /usr/bin/akonadi_control.exe
   /usr/bin/akonadictl.exe
   /usr/bin/akonadiserver.exe
+  /usr/bin/cygakonadiprivate-1.dll
   /usr/share/dbus-1/services/org.freedesktop.Akonadi.Control.service
-  /usr/share/doc/akonadi-1.1.1/AUTHORS
-  /usr/share/doc/akonadi-1.1.1/ChangeLog
-  /usr/share/doc/akonadi-1.1.1/INSTALL
-  /usr/share/doc/akonadi-1.1.1/NEWS
-  /usr/share/doc/akonadi-1.1.1/README
+  /usr/share/doc/akonadi/AUTHORS
+  /usr/share/doc/akonadi/ChangeLog
+  /usr/share/doc/akonadi/NEWS
+  /usr/share/doc/akonadi/README
   /usr/share/kde4/config/akonadi/mysql-global.conf
   /usr/share/mime/packages/akonadi-mime.xml
 
-(libakonadiprivate1)
-  /usr/bin/cygakonadiprivate-1.dll
+(libakonadiprotocolinternals1)
   /usr/bin/cygakonadiprotocolinternals-1.dll
 
-(libakonadiprivate-devel)
+(libakonadiprotocolinternals-devel)
   /usr/include/akonadi/private/akonadiprotocolinternals_export.h
   /usr/include/akonadi/private/imapparser_p.h
   /usr/include/akonadi/private/imapset_p.h
@@ -96,11 +98,8 @@ Files included in the binary packages:
 
 Port Notes:
 
------ version 1.1.1-1 -----
-Version bump for KDE 4.2.
-
------ version 1.0.0-1 -----
-Initial release for Cygwin.
+----- version 1.1.2-1 -----
+Initial release of KDE 4.2 for Cygwin 1.7.
 
 
 Cygwin port maintained by:
