--- a/README
+++ b/README
@@ -8,23 +8,23 @@ and a library (called client library) which encapsulates the
 communication between the client and the server.
 
 Runtime requirements:
-  cygwin-1.7.1-1
+  cygwin-1.7.5-1
   libboost1.40-1.40.0-1
   libgcc1-4.3.4-3
-  libQtCore4-4.5.3-2
-  libQtDBus4-4.5.3-2
-  libQtNetwork4-4.5.3-2
-  libQtSql4-4.5.3-2
-  libQtXml4-4.5.3-2
-  libsoprano4-2.3.1-1
+  libQtCore4-4.6.2-1
+  libQtDBus4-4.6.2-1
+  libQtNetwork4-4.6.2-1
+  libQtSql4-4.6.2-1
+  libQtXml4-4.6.2-1
+  libsoprano4-2.4.3-1
   libstdc++6-4.3.4-3
   mysql
 
 Build requirements:
 (besides corresponding -devel packages)
   automoc4-0.9.88-1
-  binutils-2.19.51-1
-  cygport-0.9.10-1
+  binutils-2.20.51-1
+  cygport-0.9.83-1
   gcc4-core-4.3.4-3
   gcc4-g++-4.3.4-3
   make-3.81-2
@@ -39,21 +39,24 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack akonadi-1.2.1-X-src.tar.bz2
+  unpack akonadi-1.3.1-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./akonadi-1.2.1-X.cygport all
+  cygport ./akonadi-1.3.1-X.cygport all
 
 This will create:
-  /usr/src/akonadi-1.2.1-X-src.tar.bz2
-  /usr/src/akonadi-1.2.1-X.tar.bz2
-  /usr/src/libakonadiprotocolinternals-devel-1.2.1-X.tar.bz2
-  /usr/src/libakonadiprotocolinternals1-1.2.1-X.tar.bz2
+  /usr/src/akonadi-1.3.1-X-src.tar.bz2
+  /usr/src/akonadi-1.3.1-X.tar.bz2
+  /usr/src/libakonadiprotocolinternals-devel-1.3.1-X.tar.bz2
+  /usr/src/libakonadiprotocolinternals1-1.3.1-X.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
+
+----- version 1.3.1-1 -----
+Version bump for KDE 4.4.
 
 ----- version 1.2.1-1 -----
 Version bump for KDE 4.3.
