--- a/README
+++ b/README
@@ -9,7 +9,7 @@ communication between the client and the server.
 
 Runtime requirements:
   cygwin-1.7.5-1
-  libboost1.40-1.40.0-1
+  libboost1.43-1.43.0-1
   libgcc1-4.3.4-3
   libQtCore4-4.6.2-1
   libQtDBus4-4.6.2-1
@@ -54,6 +54,9 @@ This will create:
 -------------------------------------------
 
 Port Notes:
+
+----- version 1.3.1-2 -----
+Rebuilt for Boost 1.43.
 
 ----- version 1.3.1-1 -----
 Version bump for KDE 4.4.
